# Moment-Estimator

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
experiment/: CMakeLists.txt
experiment/hierarchy/: CMakeLists.txt  bias_memory.cpp  bias_memory_low_order.cpp  bias_memory_pro.cpp  level_cnt_memory_cost.cpp  moment_estimation_accuracy.cpp  multilayer_unbiasness.cpp  multilayer_unbiasness_preload.cpp  rerror_memory_cost.cpp  sampling_card_ranges.cpp  throughput_memory.cpp
experiment/sketch/: CMakeLists.txt  on_vhll_bias_variance.cpp  on_vllc_bias_variance.cpp  operation_statistics.cpp  ton_vhll_bias_variance.cpp  topk_identification_accuracy.cpp  vhll_bias_variance.cpp
result/hierarchy/moment_estimation_accuracy/: occupied.txt
result/sketch/bias/: on_vhll_4s_8192r_1024c_9-22-14-1.txt  on_vllc_4s_8192r_1024c_9-23-15-19.txt  ton_vhll_4s_8192r_1024c_9-23-12-32.txt  ton_vhll_4s_8192r_2048c_9-23-10-22.txt  ton_vhll_4s_8192r_2048c_9-23-10-37.txt  vhll_4s_8192r_1024c_9-26-17-7.txt
result/sketch/operation_stat/: on_vhll.txt  on_vllc.txt  ton_vhll.txt  vhll.txt
src/: CMakeLists.txt
src/distribution/: CMakeLists.txt  HeadTail.hpp
src/filter/: CMakeLists.txt  MapImplFilter.hpp  MinheapFilter.hpp
src/hierarchy/: CMakeLists.txt  LUSPro.hpp  MomentEstimator.hpp  MomentEstimatorCombined.hpp  MomentEstimatorPro.hpp  UnivMonPro.hpp
src/sketch/: Aton_vHLL.hpp  Aton_vHLL_AVX.hpp  CMakeLists.txt  EMatrix.hpp  EMatrixLL.hpp  EMatrixTC.hpp  HLL.hpp  Histogram.hpp  HistogramTC.hpp  On_vHLL.hpp  On_vLLC.hpp  PMatrix.hpp  Ton_vHLL.hpp  TwoTupleSketch.h  vHLL.hpp
src/utils/: AccessStatics.hpp  CMakeLists.txt  CardinalityMap.hpp  HierarchyUtils.hpp  ThreadPool.hpp  TruthList.hpp  leader_zero.cpp  leader_zero.h
test/: CMakeLists.txt
test/hierarchy/: CMakeLists.txt  test_lus.cpp  test_moment_estimator.cpp  test_moment_estimator_combined.cpp  test_moment_estimator_pro.cpp  test_univmon.cpp
test/sketch/: CMakeLists.txt  test_CardinalityMap.cpp  test_attack.cpp  test_fp_approximation.cpp  test_global_histogram.cpp  test_histogram.cpp  test_hyperloglog.cpp  test_leading_zero.cpp  test_map_impl_filter.cpp  test_minheap.cpp  test_multiflow.cpp  test_onvhll.cpp  test_prefilter.cpp  test_tailcut.cpp  test_vhll.cpp  test_xxhash.cpp  true_distribution.cpp
test/utils/: CMakeLists.txt  test_leading_zeros.cpp  test_truthlist.cpp
